infra/k8s/overlays/kaito-chat-app/istio-httprule-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kaito-gateway
  rules:
  - backendRefs:
    - name: web
      port: 80
